--- a/public/index.html
+++ b/public/index.html
@@ -9,27 +9,32 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="styles/style.css">
   <link rel="manifest" href="manifest.webmanifest">
-
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   <title>Budget Tracker</title>
 </head>
 <body>
   <div class="wrapper">
     <div class="total">
-      <div class="total">Your total is: $<span id="total">0</span></div>
+      <div class="total">Your Balance<br> $<span id="total">0</span></div>
     </div>
 
     <canvas id="myChart"></canvas>
 
     <div class="form">
-      <input type="text" id="t-name" placeholder="Name of transaction" />
-      <input type="number" min="0" id="t-amount" placeholder="Transaction amount" />
-      <button id="add-btn"><i class="fa fa-plus buttons"></i> Add Funds</button>
-      <button id="sub-btn"><i class="fa fa-minus"></i> Subtract Funds</button>
+      <input type="text" id="t-name" class="text-input" placeholder="Name of transaction" />
+      <input type="number" min="0" id="t-amount" class="text-input" placeholder="Transaction amount" />
+      <br>
+      <button id="add-btn" class="button-input"><i class="fa fa-plus buttons"></i> Add Funds</button>
+      <button id="sub-btn" class="button-input"><i class="fa fa-minus"></i> Subtract Funds</button>
       <p class="error"></p>
     </div>
 
+    <h1 id="heading">Recent Transactions</h1>
     <div class="transactions">
-      <table>
+      
+      <table cellspacing="0" cellpadding="0">
         <thead>
           <th>Transaction</th>
           <th>Amount</th>
